@@ -1,3 +1,14 @@
+2006-09-21  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/v85x_edb_v850_disk.c (cf_disk_init): Provide phys_block_size
+	and max_transfer disk ident members.
+
+2006-09-20  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/v85x_edb_v850_disk.c:
+	DISK_CHANNEL and DISK_FUNS are now implicitly static.
+	Update DISK_CHANNEL for new io/disk macro.
+
 2004-07-02  Savin Zlobec  <savin@elatec.si> 
 
         * src/v85x_edb_v850_disk.c:
@@ -22,6 +33,7 @@
 //####ECOSGPLCOPYRIGHTBEGIN####
 // -------------------------------------------
 // This file is part of eCos, the Embedded Configurable Operating System.
+// Copyright (C) 2006 eCosCentric Ltd.
 // Copyright (C) 2003 Savin Zlobec 
 //
 // eCos is free software; you can redistribute it and/or modify it under
